<resources>
    <string name="app_name">Curb Fares</string>

    <string name="personname">Person Name</string>
    <string name="nameofperson">NAME OF PERSON</string>
    <string name="relationship">RELATIONSHIP</string>
    <string name="phoneno">PHONE NO</string>
    <string name="alternate_no">ALTERNATE NO</string>
    <string name="phonehint">(999) 999-9999</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="shortness_of_breath">Shortness of Breath</string>
    <string name="palpitations">Palpitations</string>
    <string name="dizziness">Dizziness</string>
    <string name="passing_out">Passing Out</string>
    <string name="sweating">Sweating</string>
    <string name="positive_stress_test">Positive Stress Test</string>
    <string name="rapid_heart_rate">Rapid Heart Rate</string>
    <string name="others">Others</string>
    <string name="surgery_history">SURGERY HISTORY</string>
    <string name="year">Year</string>
    <string name="operation">Operation</string>
    <string name="complications">Complications</string>
    <string name="history_of_cardiac_tests">HISTORY OF CARDIAC TESTS</string>
    <string name="outcome">Outcome</string>
    <string name="location">Location</string>
    <string name="stents">Stents</string>
    <string name="pacemaker">Pacemaker</string>
    <string name="defibrillator">Defibrillator</string>
    <string name="type_here">Type Here</string>
    <string name="allergies">ALLERGIES</string>

    <string-array name="relationship_array">
        <item>Select relationship</item>
        <item>Son</item>
        <item>Mother</item>
        <item>Father</item>
        <item>Wife</item>
        <item>Others</item>
    </string-array>

    <string-array name="history_array">
        <item>Select</item>
        <item>Last Stress Test</item>
        <item>Last Echo</item>
        <item>Last Carotid USG</item>
        <item>Last Cardiac Cath</item>
    </string-array>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="enter">Enter</string>
    <string name="enter_mobile_number">Enter mobile no</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="or">OR</string>
    <string name="title_activity_splash">Splash</string>
    <string name="history_of_cardiac_implantable">HISTORY OF CARDIAC IMPLANTABLE</string>
    <string name="complaints">COMPLAINTS</string>

    <!-- Ritesh Edited text -->>
    <string name="smoking">smoking</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="packs_per_day">How many packs per day?</string>
    <string name="how_many_years">Since how many years</string>
    <string name="have_you_quit">Have you quit</string>
    <string name="alcohol">Alcohol</string>
    <string name="occasionally">Occasionally</string>
    <string name="frequently">Frequently</string>
    <string name="everyday">Everyday</string>
    <string name="do_you_drink">Do you drink?</string>
    <string name="Coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="cola">Cola</string>
    <string name="how_much_cups">How many cups/day</string>
    <string name="ques_one">1. Do you experience any pain in the legs or feet while at rest?</string>
    <string name="ques_two">2. Do you have uncomfortable aching, fatigue, tingling, cramping or pain in your feet, calves, buttocks, hip or thigh during walking / exercise ? </string>
    <string name="ques_three"> 3. If Yes to question 2, does the pain go away when you stop walking / exercising? </string>
    <string name="ques_four"> 4. Do your feet get pale, discolored or bluish at any time during the day? </string>
    <string name="ques_five"> 5. Do you have an infection, skin wound or ulcer on your leg or foot that is slow to heal over the past 8-12 weeks? </string>
    <string name="ques_six"> 6. Do you have high cholesterol or other blood lipid (fat) problems or require cholesterol medication? </string>
    <string name="ques_seven"> 7. Do you have high blood pressure or take medication to reduce blood pressure? </string>
    <string name="questions">Questions</string>
    <string name="answer">Answer</string>


    <string name="patientName">PATIENT’S NAME</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">ZIP Code</string>
    <string name="address">ADDRESS</string>
    <string name="social_security_no">Social Security No</string>
    <string name="phone_no">Phone No</string>
    <string name="occupation">Occupation</string>
    <string name="insured_name">Insured\'s Name</string>
    <string name="group_no">Group No</string>
    <string name="policyId">Policy Id</string>
    <string name="subscriber_name">Subscriber\'s Name</string>
    <string name="insured_ssNo">Insured\'s S S No.</string>
    <string name="birthdate">Birth Date</string>
    <string name="patient_relation_ship">Patient’s relationship to subscriber</string>
    <string name="self">Self</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="other">Other</string>
    <string name="loginInfo">LOGIN INFORMATION</string>
    <string name="select_marital_status">Select Marital Status</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_group">Select Group No</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string-array name="ids">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="marital_status">
        <item>Select Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Div</item>
        <item>Sep</item>
        <item>Wid</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Trans-gender</item>
    </string-array>
    <string-array name="group_no">
        <item>Select Group No</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>
